--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.ravi.species">
 
     <application
+        android:name=".sameActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,8 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".signUp_page" />
-        <activity android:name=".Timeline"></activity>
+        <activity android:name=".signUp_page"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Timeline"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
