--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".signUp_page"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Timeline"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".signUp_page"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Timeline"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SpeciesList"></activity>
     </application>
 
 </manifest>
