--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
 
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.2'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.7.2'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.7.2'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.7.2'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.7.2'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
